--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@
 
 .video-header {
   width: 100%;
-  height: 50%;
+  height: 30%;
   display: block;
 }
 
@@ -49,8 +49,9 @@
 }
 
 .link {
+  text-decoration: none;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 25px;
   -webkit-text-stroke: 1px black;
 }
 
@@ -71,6 +72,51 @@ h2 {
   justify-content: space-between;
 }
 
+.icons {
+  display: flex;
+  justify-content: space-around;
+}
+
+.icon {
+  display: block;
+  margin: auto;
+}
+
+.icon-red {
+  animation: fly 2s infinite;
+}
+
+@keyframes fly {
+  0% {
+    text-shadow: 3px 3px 5px rgb(114, 244, 244);
+  }
+  25% {
+    text-shadow: 3px 3px 5px rgb(53, 255, 255);
+  }
+  50% {
+    text-shadow: 3px 3px 3px rgb(5, 225, 225);
+  }
+  75% {
+    text-shadow: 3px 3px 5px rgb(53, 255, 255);
+  }
+  100% {
+    text-shadow: 3px 3px 5px rgb(114, 244, 244);
+  }
+}
+.tip img {
+  width: 40%;
+  height: 400px;
+}
+
+.tip {
+  width: 100%;
+  padding: 10px;
+  background-color: aquamarine;
+  border-radius: 4px;
+  border: 1px solid aqua;
+  box-shadow: 19px 22px 8px 0px rgba(0, 0, 0, 0.1);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -84,6 +130,10 @@ p {
 
 .img {
   max-width: 50%;
+}
+
+.separador {
+  margin: 100px 0 100px 0;
 }
 
 /*# sourceMappingURL=styles.css.map */
