--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -20,7 +20,8 @@
 };
 
 .link {
+    text-decoration: none;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 25px;
     -webkit-text-stroke: 1px black;
 };
