--- a/scss/components/_tips.scss
+++ b/scss/components/_tips.scss
@@ -1,5 +1,5 @@
 @mixin tip {
-    width: 100%;
+    width: 80%;
     padding: 10px;
     background-color: aquamarine;
     border-radius: 4px;
@@ -8,8 +8,10 @@
 };
 
 .tip img{
-    width: 40%;
+    width: 400px;
     height: 400px;
+    border-radius: 50%;
+    border: 2px white;
 };
 
 .tip {
